--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Plugins/XD_AutoGenSequencer"]
 	path = Plugins/XD_AutoGenSequencer
 	url = https://github.com/Eragon-Brisingr/XD_AutoGenSequencer.git
+[submodule "Plugins/XD_AutoGenSequencerEx"]
+	path = Plugins/XD_AutoGenSequencerEx
+	url = https://github.com/Eragon-Brisingr/XD_AutoGenSequencerEx.git
