添加镜头模板

--- a/Config/DefaultAutoGenDialogueSettings.ini
+++ b/Config/DefaultAutoGenDialogueSettings.ini
@@ -1,6 +1,6 @@
 
 
 [/Script/XD_AutoGenSequencer.AutoGenDialogueSettings]
-DialogueSentenceType=/Script/XD_AutoGenSequencer.DialogueSentence
-DialogueSentenceSectionType=/Script/XD_AutoGenSequencer.DialogueSentenceSection
+DialogueSentenceType=/Script/XD_AutoGenSequencerEx.DialogueSentenceEx
+DialogueSentenceSectionType=/Script/XD_AutoGenSequencerEx.DialogueSentenceExSection
 
