同步子模块

--- a/Config/DefaultAutoGenDialogueSettings.ini
+++ b/Config/DefaultAutoGenDialogueSettings.ini
@@ -4,3 +4,7 @@
 DialogueSentenceType=/Script/XD_AutoGenSequencerEx.DialogueSentenceEx
 DialogueSentenceSectionType=/Script/XD_AutoGenSequencerEx.DialogueSentenceExSection
 
+[/Script/XD_AutoGenSequencer_Editor.AutoGenDialogueSettings]
+DefaultAutoGenDialogueAnimSet=/Game/AutoGenDialogue/Demo/Demo_AutoGenDialogueAnimSet.Demo_AutoGenDialogueAnimSet
+DefaultAutoGenDialogueCameraSet=/Game/AutoGenDialogue/Demo/Demo_AutoGenDialogueCameraSet.Demo_AutoGenDialogueCameraSet
+
