--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,16 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.Engine]
++ActiveClassRedirects=(OldClassName="DialogueStandPositionTemplate",NewClassName="/Script/XD_AutoGenSequencer_Editor.DialogueStandPositionTemplate")
++ActiveClassRedirects=(OldClassName="PreviewDialogueSoundSequence",NewClassName="/Script/XD_AutoGenSequencer_Editor.PreviewDialogueSoundSequence")
++ActiveClassRedirects=(OldClassName="PreviewDialogueSentenceSection",NewClassName="/Script/XD_AutoGenSequencer_Editor.PreviewDialogueSentenceSection")
++ActiveClassRedirects=(OldClassName="PreviewDialogueSentenceTrack",NewClassName="/Script/XD_AutoGenSequencer_Editor.PreviewDialogueSentenceTrack")
++ActiveClassRedirects=(OldClassName="AutoGenDialogueSequenceConfig",NewClassName="/Script/XD_AutoGenSequencer_Editor.AutoGenDialogueSequenceConfig")
+
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/AutoGenDialogue/L_PackageTest.L_PackageTest
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
